--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -106,7 +106,8 @@
     padding: 0;
     background: transparent;
     inset: 0;
-    width: min(1000px, 96vw);
+    width: 1212px;
+    height: 592px;
     margin: auto;
 }
 
@@ -219,8 +220,8 @@
 }
 
 .ac-field input {
-    width: 100%;
-    height: 48px;
+    width: 422px;
+    height: 50px;
     padding: 0 44px 0 16px;
     /* Platz für Icon rechts */
     border: 1px solid var(--ac-line);
@@ -234,7 +235,7 @@
 
 .ac-field img {
     position: absolute;
-    top: 10px;
+    top: 15px;
     right: 10px;
     width: 20px;
     height: 20px;
